chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tokeninfo
    env: dev
  name: tokeninfo
  namespace: dev
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: tokeninfo
